; ModuleID = '/home/carl/AnghaBench/jq/src/extr_builtin.c_f_type.c'
source_filename = "/home/carl/AnghaBench/jq/src/extr_builtin.c_f_type.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32)* @f_type to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @f_type(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* %4, align 4
  %7 = call i32 @jv_get_kind(i32 %6)
  %8 = call i32 @jv_kind_name(i32 %7)
  %9 = call i32 @jv_string(i32 %8)
  store i32 %9, i32* %5, align 4
  %10 = load i32, i32* %4, align 4
  %11 = call i32 @jv_free(i32 %10)
  %12 = load i32, i32* %5, align 4
  ret i32 %12
}

declare dso_local i32 @jv_string(i32) #1

declare dso_local i32 @jv_kind_name(i32) #1

declare dso_local i32 @jv_get_kind(i32) #1

declare dso_local i32 @jv_free(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
